# tidi

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VERSION  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  test.yaml
demo/: hello_world.py  resolved_from_func.py  resolved_from_registered_types.py
docs/: index.md  usage.md
docs/reference/: decorator.md  index.md  parameters.md  registry.md  resolver.md
reference/: index.html
reference/decorator/: index.html
reference/parameters/: index.html
reference/registry/: index.html
reference/resolver/: index.html
search/: search_index.json
src/tidi/: __init__.py  decorator.py  parameters.py  registry.py  resolver.py
tests/: test_decorator.py  test_parameters.py  test_registry.py  test_resolver.py  test_tidi.py
usage/: index.html
