[tool.poetry]
name = "tidi"
version = "0.1.3"
description = "A small dependency injection Python library"
authors = ["Sam Patterson <no@emails.please>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
packages = [{ include = "tidi", from = "src" }]

[project.urls]
Documentation = "https://pattersam.github.io/tidi/reference/"
Repository = "https://github.com/pattersam/tidi"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
commitizen = "^3.7.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.2.5"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.5.2"
pygments = "^2.16.1"
pymdown-extensions = "^10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"
tag_format = "v$version"
version_files = [
    "VERSION",
    "pyproject.toml:^version",
    "src/tidi/__init__.py:^__version",
]
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"


[tool.black]
line-length = 100

[tool.ruff]
line-length = 120

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
